--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,24 +3,65 @@ project(Heterogeneous_Conjugate_Gradients)
 
 set(CMAKE_CXX_STANDARD 20)
 
+option(ENABLE_TESTS "Enable Test" ON)
 
 
+# find AdaptiveCpp SYCL implementation
 find_package(AdaptiveCpp CONFIG REQUIRED)
+
+# find OpenMP
 find_package(OpenMP REQUIRED)
 
-add_executable(Heterogeneous_CG main.cpp)
-add_sycl_to_target(TARGET Heterogeneous_CG SOURCES main.cpp)
+# include FetchContent
+include(FetchContent)
+
+
+# define all program source files for the executable
+set(EXECUTABLE_FILES ${CMAKE_SOURCE_DIR}/src/main.cpp)
+
+# define all library files that will be linked to the executable
+set(LIBRARY_FILES ${CMAKE_SOURCE_DIR}/src/matrixData/SymmetricMatrix.cpp)
+add_library(Heterogeneous_CG_lib ${LIBRARY_FILES})
+
+include_directories(${CMAKE_SOURCE_DIR}/src)
+include_directories(${CMAKE_SOURCE_DIR}/src/MatrixData)
+
+# create and executable, add SYCL to executable and link OpenMP and custom library files
+add_executable(Heterogeneous_CG ${EXECUTABLE_FILES})
+target_link_libraries(Heterogeneous_CG PUBLIC Heterogeneous_CG_lib)
+add_sycl_to_target(TARGET Heterogeneous_CG SOURCES ${EXECUTABLE_FILES})
 target_link_options(Heterogeneous_CG PUBLIC -fopenmp)
 
-include(FetchContent)
+message("Building the hardware sampling library")
+# build and link the hws library
 set(HWS_ENABLE_PYTHON_BINDINGS OFF CACHE INTERNAL "" FORCE)
 FetchContent_Declare(
         hws
         GIT_REPOSITORY https://github.com/SC-SGS/hardware_sampling
-        GIT_TAG v1.0.3
+        GIT_TAG c78d3ec832a2b59259689ec7a3c96efda640f4d2
 )
 FetchContent_MakeAvailable(hws)
 add_dependencies(Heterogeneous_CG hws)
 target_include_directories(Heterogeneous_CG PUBLIC ${hws_SOURCE_DIR}/include)
 target_link_libraries(Heterogeneous_CG PUBLIC hws::hws)
+target_link_libraries(Heterogeneous_CG_lib PUBLIC hws::hws)
 
+# Tests
+if (${ENABLE_TESTS})
+    set(TEST_SOURCE_FILES ${CMAKE_SOURCE_DIR}/tests/test.cpp)
+
+    FetchContent_Declare(
+            googletest
+            GIT_REPOSITORY https://github.com/google/googletest.git
+            GIT_TAG v1.16.0
+    )
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    FetchContent_MakeAvailable(googletest)
+
+    add_executable(Heterogeneous_CG_Test ${TEST_SOURCE_FILES})
+    enable_testing()
+    include(GoogleTest)
+    gtest_discover_tests(Heterogeneous_CG_Test)
+    target_link_libraries(Heterogeneous_CG_Test GTest::gtest_main Heterogeneous_CG_lib)
+    message("Tests are enabled")
+endif()
