start implementation of matrix parser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,11 +24,13 @@ set(EXECUTABLE_FILES src/main.cpp)
 
 # define all library files that will be linked to the executable
 set(LIBRARY_FILES src/matrixData/SymmetricMatrix.cpp
-        src/utility/Configuration.hpp)
+        src/utility/Configuration.hpp
+        src/utility/MatrixParser.cpp
+        src/utility/MatrixParser.hpp)
 add_library(Heterogeneous_CG_lib ${LIBRARY_FILES})
 
 include_directories(src)
-include_directories(src/MatrixData)
+include_directories(src/matrixData)
 include_directories(src/utility)
 
 # create and executable, add SYCL to executable and link OpenMP and custom library files
