added cg class and functionality to parse rhs vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,12 +26,16 @@ set(EXECUTABLE_FILES src/main.cpp)
 set(LIBRARY_FILES src/matrixData/SymmetricMatrix.cpp
         src/utility/Configuration.hpp
         src/utility/MatrixParser.cpp
-        src/utility/MatrixParser.hpp)
+        src/utility/MatrixParser.hpp
+        src/solver/cg/CG.cpp
+        src/solver/cg/CG.hpp)
 add_library(Heterogeneous_CG_lib ${LIBRARY_FILES})
 
 include_directories(src)
 include_directories(src/matrixData)
 include_directories(src/utility)
+include_directories(src/solver)
+include_directories(src/solver/cg)
 
 # create and executable, add SYCL to executable and link OpenMP and custom library files
 add_executable(Heterogeneous_CG ${EXECUTABLE_FILES})
