--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 option(ENABLE_TESTS "Enable Test" ON)
 option(USE_DOUBLE "Use FP64 precision instead of FP32 for floating point data types" ON)
 
-set(CMAKE_CXX_FLAGS "-march=native")
+#set(CMAKE_CXX_FLAGS "-march=native")
 
 
 
