--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,8 @@ message("Building the hardware sampling library")
 # build and link the hws library
 set(HWS_ENABLE_PYTHON_BINDINGS OFF CACHE INTERNAL "" FORCE)
 set(HWS_SAMPLING_INTERVAL 2 CACHE INTERNAL "" FORCE)
+set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS TRUE CACHE BOOL "" FORCE)
+
 FetchContent_Declare(
         hws
         GIT_REPOSITORY https://github.com/SC-SGS/hardware_sampling
