added class for cholesky solver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ include(FetchContent)
 
 
 # define all program source files for the executable
-set(EXECUTABLE_FILES src/main.cpp)
+set(EXECUTABLE_FILES src/main.cpp
+        src/solver/cholesky/Cholesky.cpp
+        src/solver/cholesky/Cholesky.hpp)
 
 # define all library files that will be linked to the executable
 set(LIBRARY_FILES
