--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,9 @@ set(EXECUTABLE_FILES src/main.cpp
         src/solver/cholesky/Cholesky.cpp
         src/solver/cholesky/Cholesky.hpp
         src/solver/cholesky/TriangularSystemSolver.cpp
-        src/solver/cholesky/TriangularSystemSolver.hpp)
+        src/solver/cholesky/TriangularSystemSolver.hpp
+        src/gaussianProcess/GaussianProcess.cpp
+        src/gaussianProcess/GaussianProcess.hpp)
 
 # define all library files that will be linked to the executable
 set(LIBRARY_FILES
